<resources>
    <string name="app_name">ProjectApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_slide">Choose Your Product</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Service</string>
    <string name="get_started">Let\'s get started</string>

    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industrys standard dummy text ever since the </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have An Account?</string>
    <string name="price">Price: $</string>
    <string name="product_name">Product Name</string>
    <string name="_90">90</string>
    <string name="new_products">New Products</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_image">Product Image</string>
    <string name="add_item">Add Item</string>
    <string name="remove_item">Remove Item</string>
    <string name="product_description" />
    <string name="currency_symbol" />
    <string name="total_quantity">Total Quantity</string>
</resources>